bump j2cl to v20260527-1
Signed-off-by: Dmitrii Tikhomirov <chani.liet@gmail.com>